Refatorado metodos de retorno de itens pedidos, function de chamadas do banco de dados, atualizadas.